[package]
name = "ringstory-face-svc"
version = "0.1.0"
edition = "2021"
description = "RingStory Face Recognition Service (Rust + ONNX Runtime)"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
ort = "2"               # ONNX Runtime bindings
image = "0.25"
ndarray = "0.16"
redis = { version = "0.26", features = ["tokio-comp"] }
log = "0.4"
env_logger = "0.11"
